turn off pull_request_target for testing
Signed-off-by: Roger Barker <roger.barker@swirldslabs.com>

--- a/.github/workflows/flow-pull-request-formatting.yaml
+++ b/.github/workflows/flow-pull-request-formatting.yaml
@@ -7,12 +7,12 @@ on:
       - reopened
       - edited
       - synchronize
-  pull_request_target:
-    types:
-      - opened
-      - reopened
-      - edited
-      - synchronize
+#  pull_request_target:
+#    types:
+#      - opened
+#      - reopened
+#      - edited
+#      - synchronize
 
 defaults:
   run:
