--- a/.github/workflows/flow-pull-request-formatting.yaml
+++ b/.github/workflows/flow-pull-request-formatting.yaml
@@ -1,18 +1,12 @@
 name: "PR Formatting"
 on:
   workflow_dispatch:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - reopened
       - edited
       - synchronize
-#  pull_request_target:
-#    types:
-#      - opened
-#      - reopened
-#      - edited
-#      - synchronize
 
 defaults:
   run:
