Default core-config.json no longer provides any value.
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/public/core-config.json
+++ b/public/core-config.json
@@ -1,20 +1,20 @@
 {
   "productName": null,
-  "productLogoLightURL": "product-logo-light.png",
-  "productLogoDarkURL": "product-logo-dark.png",
+  "productLogoLightURL": null,
+  "productLogoDarkURL": null,
   "productMiniLogoLightURL": null,
   "productMiniLogoDarkURL": null,
   "documentTitlePrefix": null,
-  "productDescription": "Hiero Explorer is a ledger explorer for the Hiero network.",
+  "productDescription": null,
   "metaDescription": null,
   "metaURL": null,
-  "builtOnLogoLightURL": "technology-logo-light.svg",
-  "builtOnLogoDarkURL": "technology-logo-dark.svg",
+  "builtOnLogoLightURL": null,
+  "builtOnLogoDarkURL": null,
   "builtOnURL": null,
-  "sponsorLogoLightURL": "sponsor-logo-light.png",
-  "sponsorLogoDarkURL": "sponsor-logo-dark.png",
+  "sponsorLogoLightURL": null,
+  "sponsorLogoDarkURL": null,
   "sponsorURL": null,
-  "termsOfUseURL": "",
+  "termsOfUseURL": null,
   "estimatorNotice": null,
   "walletChooserDisclaimerPopup": null,
   "googleTagID": null,
@@ -23,8 +23,8 @@
   "arweaveServerURL": null,
   "cryptoName": null,
   "cryptoSymbol": null,
-  "cryptoLogoLightURL": "crypto-logo-light.svg",
-  "cryptoLogoDarkURL": "crypto-logo-dark.svg",
+  "cryptoLogoLightURL": null,
+  "cryptoLogoDarkURL": null,
   "walletConnectID": null,
   "hgraphKey": null
 }
