Fix typo in chart/values.yaml
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -228,7 +228,7 @@ config: |
 core-config: |
   {
     "productName": null,
-    "productLogoLightURL": null",
+    "productLogoLightURL": null,
     "productLogoDarkURL": null,
     "productMiniLogoLightURL": null,
     "productMiniLogoDarkURL": null,
