Profile tab is now hidden when CoreConfig.portalURL is unset.
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/public/core-config.json
+++ b/public/core-config.json
@@ -26,5 +26,6 @@
   "cryptoLogoLightURL": null,
   "cryptoLogoDarkURL": null,
   "walletConnectID": null,
-  "hgraphKey": null
+  "hgraphKey": null,
+  "portalURL": null
 }
