--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.7",
     "@types/prismjs": "^1.26.5",
+    "@types/grecaptcha": "^3.0.9",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/coverage-v8": "^3.2.4",
