Added recaptchaKey to default core-config.json
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/public/core-config.json
+++ b/public/core-config.json
@@ -27,5 +27,6 @@
   "cryptoLogoDarkURL": null,
   "walletConnectID": null,
   "hgraphKey": null,
-  "portalURL": null
+  "portalURL": null,
+  "recaptchaKey": null
 }
