Add publicLabelsURL parameter to network configuration.
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/public/networks-config.json
+++ b/public/networks-config.json
@@ -14,6 +14,7 @@
     "erc20IndexURL": "mainnet/erc-20.json",
     "erc721IndexURL": "mainnet/erc-721.json",
     "erc1155IndexURL": "mainnet/erc-1155.json",
+    "publicLabelsURL": null,
     "sourcifySetup": {
       "activate": true,
       "repoURL": "https://repository.local/contracts/",
@@ -35,6 +36,7 @@
     "erc20IndexURL": "testnet/erc-20.json",
     "erc721IndexURL": "testnet/erc-721.json",
     "erc1155IndexURL": "testnet/erc-1155.json",
+    "publicLabelsURL": null,
     "sourcifySetup": {
       "activate": true,
       "repoURL": "https://repository.local/contracts/",
@@ -56,6 +58,7 @@
     "erc20IndexURL": null,
     "erc721IndexURL": "previewnet/erc-721.json",
     "erc1155IndexURL": null,
+    "publicLabelsURL": null,
     "sourcifySetup": {
       "activate": true,
       "repoURL": "https://repository.local/contracts/",
