--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.9.0",
     "base32-decode": "^1.0.0",
     "base32-encode": "^2.0.0",
+    "brotli-compress": "^1.3.3",
     "chart.js": "^4.4.9",
     "ethers": "^6.14.0",
     "file-saver": "^2.0.5",
