Set vueCompilerOptions.strictTemplates: true in tsconfig.app.json
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,5 +9,11 @@
     "paths": {
       "@/*": ["./src/*"]
     }
+  },
+  "vueCompilerOptions": {
+    "strictTemplates": true,
+    "fallthroughAttributes": true,
+    "dataAttributes": ["data-cy"],
+    "checkUnknownProps": false
   }
 }
