OTable.customRowKey has been renamed rowKey in Oruga 0.9.0.
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,6 @@
   "vueCompilerOptions": {
     "strictTemplates": true,
     "fallthroughAttributes": true,
-    "dataAttributes": ["id","data-cy","customRowKey"]
+    "dataAttributes": ["id","data-cy"]
   }
 }
