chore: enabling checkUnknownProps in vueCompilerOptions (#1975)
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,6 @@
   "vueCompilerOptions": {
     "strictTemplates": true,
     "fallthroughAttributes": true,
-    "dataAttributes": ["data-cy"],
-    "checkUnknownProps": false
+    "dataAttributes": ["id","data-cy"]
   }
 }
