--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "base32-encode": "^2.0.0",
     "brotli-compress": "^1.3.3",
     "chart.js": "^4.5.0",
+    "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
     "ethers": "^6.15.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "lucide-vue-next": "^0.525.0",
     "multiformats": "^13.3.7",
     "prismjs": "^1.30.0",
+    "topojson-client": "^3.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
@@ -59,9 +62,13 @@
     "@cypress/code-coverage": "^3.14.5",
     "@eslint/js": "^9.30.1",
     "@tsconfig/node18": "^18.2.4",
+    "@types/d3": "^7.4.3",
+    "@types/d3-geo": "^3.1.0",
     "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.7",
     "@types/prismjs": "^1.26.5",
+    "@types/topojson-client": "^3.1.5",
+    "@types/topojson-specification": "^1.0.5",
     "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitest/coverage-v8": "^3.2.4",
