Updated name in _backend package.json.
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/_backend/package.json
+++ b/_backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "_backend",
+  "name": "@hiero-ledger/hiero-explorer-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
