--- a/.github/workflows/zxc-compile-explorer-code.yaml
+++ b/.github/workflows/zxc-compile-explorer-code.yaml
@@ -63,6 +63,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: _frontend/package-lock.json
 
       - name: Setup Xvfb
         if: ${{ inputs.enable-e2e-tests && !cancelled() }}
