--- a/.github/workflows/zxc-compile-explorer-code.yaml
+++ b/.github/workflows/zxc-compile-explorer-code.yaml
@@ -55,9 +55,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Print working directory
-        run: pwd
-
       - name: Setup NodeJS
         uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
         with:
@@ -86,9 +83,6 @@ jobs:
           sudo apt-get install -y ./google-chrome-stable_current_amd64.deb
           rm google-chrome-stable_current_amd64.deb
 
-      - name: Print working directory
-        run: pwd
-
       - name: Install Dependencies
         run: npm ci
 
@@ -103,10 +97,17 @@ jobs:
         uses: step-security/vitest-coverage-report-action@7a6fbb006cdcfb6ceb153c4a849ce3c5b6bf1147 # v2.8.3
         if: ${{ inputs.enable-unit-tests && !cancelled() }}
 
+      - name: Print working directory
+        run: pwd
+
+      - name: List contents
+        run: ls -la
+
       - name: Cypress run
         uses: cypress-io/github-action@b8ba51a856ba5f4c15cf39007636d4ab04f23e3c # v6.10.2
         if: ${{ inputs.enable-e2e-tests && !cancelled() }}
         with:
+          working-directory: ./_frontend
           install-command: npm install
           browser: chrome
           start: npm run dev
