--- a/.github/workflows/zxc-release-docker-container.yaml
+++ b/.github/workflows/zxc-release-docker-container.yaml
@@ -88,6 +88,7 @@ jobs:
         with:
           node-version: 22
           cache: npm
+          cache-dependency-path: _frontend/package-lock.json
 
       - name: Setup Docker Buildx QEMU
         uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
