Fix Docker context in zxc-release-docker-container.
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/.github/workflows/zxc-release-docker-container.yaml
+++ b/.github/workflows/zxc-release-docker-container.yaml
@@ -137,7 +137,8 @@ jobs:
         env:
           SOURCE_DATE_EPOCH: ${{ steps.commit.outputs.source-date }}
         with:
-          context: ${{ github.workspace }}
+          context: ./_frontend
+          file: ./_frontend/Dockerfile
           push: ${{ inputs.dry-run-enabled != true }}
           no-cache: true
           build-args: |
