--- a/_backend/package.json
+++ b/_backend/package.json
@@ -13,10 +13,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "node -r tsconfig-paths/register -r ts-node/register --test \"test/**/*.test.ts\"",
-    "test:watch": "node -r tsconfig-paths/register -r ts-node/register --test --watch \"test/**/*.test.ts\"",
-    "test:cov": "node -r tsconfig-paths/register -r ts-node/register --test --experimental-test-coverage \"test/**/*.test.ts\"",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register --test  \"test/**/*.test.ts\""
+    "test": "node -r tsconfig-paths/register -r ts-node/register --test \"tests/**/*.test.ts\"",
+    "test:watch": "node -r tsconfig-paths/register -r ts-node/register --test --watch \"tests/**/*.test.ts\"",
+    "test:cov": "node -r tsconfig-paths/register -r ts-node/register --test --experimental-test-coverage \"tests/**/*.test.ts\"",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register --test  \"tests/**/*.test.ts\""
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
