Clean-up debug code from release workflows.
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/.github/workflows/zxc-release-helm-chart.yaml
+++ b/.github/workflows/zxc-release-helm-chart.yaml
@@ -52,26 +52,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
-      - name: Set fallback version for debug
-        id: set_fallback_version
-        if: ${{ inputs.dry-run-enabled == true }}
-        run: |
-          VERSION="12.0.0"
-          echo "FALLBACK VERSION=$VERSION"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
-      - name: Set new version
-        id: set_new_version
-        run: |
-          VERSION="${{ inputs.new-version }}"
-          VERSION=${VERSION:-${{ steps.set_fallback_version.outputs.version }}}
-          echo "VERSION=$VERSION"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
       - name: Update Helm Chart Version
         uses: mikefarah/yq@1187c954ec44c3a0e62c13ca7dc9dadc1ca80ae7 # v4.46.1
         env:
-          relver: ${{ steps.set_new_version.outputs.version }}
+          relver: ${{ inputs.new-version }}
         with:
           cmd: yq '.version = strenv(relver) | .appVersion = strenv(relver)' -i _frontend/chart/Chart.yaml
 
@@ -86,4 +70,4 @@ jobs:
 
       - name: Push Helm Chart
         if: ${{ inputs.dry-run-enabled != true }}
-        run: helm push hiero-explorer-chart-${{ steps.set_new_version.outputs.version }}.tgz oci://ghcr.io/hiero-ledger/hiero-mirror-node-explorer
+        run: helm push hiero-explorer-chart-${{ inputs.new-version }}.tgz oci://ghcr.io/hiero-ledger/hiero-mirror-node-explorer
