--- a/.github/workflows/zxc-release-docker-container.yaml
+++ b/.github/workflows/zxc-release-docker-container.yaml
@@ -74,26 +74,10 @@ jobs:
           echo "sha-abbrev=$(git rev-parse HEAD | tr -d '[:space:]' | cut -c1-8)" >> "${GITHUB_OUTPUT}"
           echo "source-date=$(git log -1 --pretty=%ct)" >> "${GITHUB_OUTPUT}"
 
-      - name: Set fallback version for debug
-        id: set_fallback_version
-        if: ${{ inputs.dry-run-enabled == true }}
-        run: |
-          VERSION="12.0.0"
-          echo "FALLBACK VERSION=$VERSION"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
-      - name: Set new version
-        id: set_new_version
-        run: |
-          VERSION="${{ inputs.new-version }}"
-          VERSION=${VERSION:-${{ steps.set_fallback_version.outputs.version }}}
-          echo "VERSION=$VERSION"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
       - name: Update Application Version
         run: |
           cat package.json | \
-            jq --arg version "${{ steps.set_new_version.outputs.version }}" '.version = $version' | \
+            jq --arg version "${{ inputs.new-version }}" '.version = $version' | \
             tee package.json
 
       - name: Show Package Configuration
@@ -147,7 +131,7 @@ jobs:
             linux/arm64
             linux/amd64
           tags: |
-            ghcr.io/hiero-ledger/hiero-mirror-node-explorer/hiero-explorer:${{ steps.set_new_version.outputs.version }}
+            ghcr.io/hiero-ledger/hiero-mirror-node-explorer/hiero-explorer:${{ inputs.new-version }}
             ghcr.io/hiero-ledger/hiero-mirror-node-explorer/hiero-explorer:latest
 
       - name: Render Job Summary
@@ -158,7 +142,7 @@ jobs:
           
           printf "| %s | %s | %s | %s |\n" \
             "ghcr.io/hiero-ledger/hiero-mirror-node-explorer/hiero-explorer" \
-            "${{ steps.set_new_version.outputs.version }}" \
+            "${{ inputs.new-version }}" \
             "[Github Console](https://github.com/hiero-ledger/hiero-mirror-node-explorer/pkgs/container/hiero-mirror-node-explorer%2Fhiero-explorer)" \
             "linux/amd64, linux/arm64" >> "${GITHUB_STEP_SUMMARY}"          
           
