Added _common/auth/SignInInput and tuned _backend/tsconfig.json.
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/_backend/tsconfig.json
+++ b/_backend/tsconfig.json
@@ -15,6 +15,10 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
-    "lib": ["ESNext"]
-  }
+    "lib": ["ESNext"],
+  },
+  "include": [
+    "**/*",
+    "../_common/**/*.ts"
+  ]
 }
