--- a/_backend/package.json
+++ b/_backend/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "argon2": "^0.43.1",
+    "class-validator": "^0.14.2",
+    "class-transformer": "^0.5.1",
     "pg": "^8.16.3",
     "postgres-migrations": "^5.3.0",
     "reflect-metadata": "^0.2.2",
