--- a/_backend/package.json
+++ b/_backend/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "argon2": "^0.43.1",
     "class-validator": "^0.14.2",
