--- a/_backend/package.json
+++ b/_backend/package.json
@@ -25,8 +25,8 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "argon2": "^0.43.1",
-    "class-validator": "^0.14.2",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "pg": "^8.16.3",
     "postgres-migrations": "^5.3.0",
     "reflect-metadata": "^0.2.2",
@@ -44,6 +44,7 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.2",
+    "cookie": "^1.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
