--- a/_backend/package.json
+++ b/_backend/package.json
@@ -27,6 +27,7 @@
     "argon2": "^0.43.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "pg": "^8.16.3",
     "postgres-migrations": "^5.3.0",
     "reflect-metadata": "^0.2.2",
@@ -40,6 +41,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.5",
