--- a/_frontend/tsconfig.app.json
+++ b/_frontend/tsconfig.app.json
@@ -7,6 +7,7 @@
     "composite": true,
     "baseUrl": ".",
     "paths": {
+      "@common/*": ["../_common/*"],
       "@/*": ["./src/*"]
     }
   },
