Temporarily _common interfaces in _backend to please nestjs :(
Signed-off-by: Eric Le Ponner <eric.leponner@icloud.com>

--- a/_backend/tsconfig.json
+++ b/_backend/tsconfig.json
@@ -15,10 +15,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
-    "lib": ["ESNext"],
-  },
-  "include": [
-    "**/*",
-    "../_common/**/*.ts"
-  ]
+    "lib": ["ESNext"]
+  }
 }
