--- a/_backend/.env.example
+++ b/_backend/.env.example
@@ -3,9 +3,10 @@ PG_HOST=localhost
 PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=password
-PG_DATABASE=explorer__dev
-PG_DEFAULT_DATABASE=postgres
+PG_DATABASE=postgres
 
+# Secret key used to sign and verify JWT
+# Changing this key will invalidate ALL SESSION TOKENS
 JWT_SECRET_KEY=
 
 # SPARKPOST_SECRET_KEY=
