--- a/_backend/package.json
+++ b/_backend/package.json
@@ -19,6 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register --test  \"tests/**/*.test.ts\" \"src/**/*.spec.ts\""
   },
   "dependencies": {
+    "@hashgraph/sdk": "^2.70.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
