Align networks-config-http-example.json on latest network configurations changes.
Signed-off-by: Simon Viénot <simon.vienot@icloud.com>

--- a/_frontend/networks-config-http-example.json
+++ b/_frontend/networks-config-http-example.json
@@ -4,10 +4,17 @@
     "displayName": "MAINNET",
     "url": "https://mainnet-public.mirrornode.hedera.com/",
     "ledgerID": "00",
+    "baseRealm": 0,
+    "baseShard": 0,
     "enableWallet": true,
     "enableStaking": true,
     "enableExpiry": true,
     "enableMarket": true,
+    "popularTokenIndexURL": "popular-tokens.json",
+    "erc20IndexURL": "mainnet/erc-20.json",
+    "erc721IndexURL": "mainnet/erc-721.json",
+    "erc1155IndexURL": "mainnet/erc-1155.json",
+    "publicLabelsURL": null,
     "sourcifySetup": {
       "activate": true,
       "repoURL": "http://localhost:10000/contracts/",
@@ -21,10 +28,16 @@
     "displayName": "TESTNET",
     "url": "https://testnet.mirrornode.hedera.com/",
     "ledgerID": "01",
+    "baseRealm": 0,
+    "baseShard": 0,
     "enableWallet": true,
     "enableStaking": true,
     "enableExpiry": false,
     "enableMarket": false,
+    "erc20IndexURL": "testnet/erc-20.json",
+    "erc721IndexURL": "testnet/erc-721.json",
+    "erc1155IndexURL": "testnet/erc-1155.json",
+    "publicLabelsURL": null,
     "sourcifySetup": {
       "activate": true,
       "repoURL": "http://localhost:10000/contracts/",
@@ -38,10 +51,16 @@
     "displayName": "PREVIEWNET",
     "url": "https://previewnet.mirrornode.hedera.com/",
     "ledgerID": "02",
-    "enableWallet": true,
+    "baseRealm": 0,
+    "baseShard": 0,
+    "enableWallet": false,
     "enableStaking": false,
     "enableExpiry": false,
     "enableMarket": false,
+    "erc20IndexURL": null,
+    "erc721IndexURL": "previewnet/erc-721.json",
+    "erc1155IndexURL": null,
+    "publicLabelsURL": null,
     "sourcifySetup": {
       "activate": true,
       "repoURL": "http://localhost:10000/contracts/",
@@ -55,10 +74,16 @@
     "displayName": "LOCAL NODE",
     "url": "http://127.0.0.1:5551",
     "ledgerID": "FF",
-    "enableWallet": true,
+    "baseRealm": 0,
+    "baseShard": 0,
+    "enableWallet": false,
     "enableStaking": false,
     "enableExpiry": false,
     "enableMarket": false,
+    "erc20IndexURL": null,
+    "erc721IndexURL": null,
+    "erc1155IndexURL": null,
+    "publicLabelsURL": null,
     "sourcifySetup": {
       "activate": true,
       "repoURL": "http://localhost:10000/contracts/",
